<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.QuoteFragment">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.norris_app.viewmodel.ApiQuoteViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="20dp"
            tools:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@{viewModel.response.response}"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:visibility="@{viewModel.response.isLoading ? View.GONE : View.VISIBLE}"
                tools:layout_marginBottom="50dp" />

            <ImageView
                android:id="@+id/loader"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/loader"
                android:gravity="center"
                android:visibility="@{viewModel.response.isLoading ? View.VISIBLE : View.GONE}"
                tools:layout_marginBottom="50dp" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:contentDescription="@string/favourite"
                android:src="@drawable/ic_favourite_border"
                android:tag="@string/favourite_border"
                android:visibility="@{viewModel.response.isSuccess ? View.VISIBLE : View.GONE}" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.getRandomQuote()}"
            android:text="@string/random_btn"
            tools:textSize="20sp" />
    </LinearLayout>
</layout>