<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
        <ImageView
            android:id="@+id/chuckNorrisImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_chuck_norris_white" />

        <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/colorBackground"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/readItTogetherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="10dp"
                android:text="@string/read_it_together"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/login_button"
                android:layout_below="@+id/readItTogetherTextView"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:nextFocusRight="@id/passwordEditText"
                        android:nextFocusDown="@id/passwordEditText"
                        android:nextFocusForward="@id/passwordEditText"
                        android:textColor="@color/colorTextView"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/frame_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_marginTop="25dp"
                        android:textColor="@color/colorTextView"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:onClick="onSignUp"
                        android:textColor="@color/colorTextView"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onForgetPassword"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorTextView"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:onClick="onLogin"
                android:textSize="16sp" />

        </RelativeLayout>
</RelativeLayout>
</layout>

