<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="start|center_vertical">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="logout"
                    app:srcCompat="@drawable/ic_logout"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/logout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical|end">

                <ImageView
                    android:id="@+id/homeBtn"
                    android:layout_width="42dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="0dp"
                    android:onClick="navigateToHome"
                    app:srcCompat="@drawable/ic_chuck_portrait"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/home_title" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="50sp" />


        <fragment
            android:id="@+id/fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintStart_toStartOf="@+id/profil"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/navigation" />


    </LinearLayout>

</layout>